crates/solidity/testing/snapshots/bindings_output/using/top_level/generated/0.6.0-failure.txt
# This file is generated automatically by infrastructure scripts (crates/solidity/outputs/cargo/tests/src/bindings_output/runner.rs:37:18). Please don't edit by hand.

Parse errors:
Error: Expected ContractKeyword or EnumKeyword or ImportKeyword or InterfaceKeyword or LibraryKeyword or PragmaKeyword or StructKeyword.
    ╭─[input.sol:5:1]
    │
  5 │ ╭─▶ function increment(Counter memory _counter) public {}
    ┆ ┆   
 13 │ ├─▶ }
    │ │       
    │ ╰─────── Error occurred here.
────╯
References and definitions: 
   ╭─[input.sol:1:1]
   │
 1 │ struct Counter {
   │        ───┬───  
   │           ╰───── name: 1
 2 │     uint value;
   │          ──┬──  
   │            ╰──── name: 2
───╯
Definiens: 
   ╭─[input.sol:1:1]
   │
 1 │ ╭─▶ struct Counter {
 2 │ │       uint value;
   │ │   ────────┬───────  
   │ │           ╰───────── definiens: 2
 3 │ ├─▶ }
   │ │       
   │ ╰─────── definiens: 1
───╯
